# Chedr

./: .gitignore  README.md  pyproject.toml
chedr/: app.py
chedr/config/: config.json  example_budget.csv  example_key.json
chedr/core/: chedr.py  state.py
chedr/pages/: budget.py  deepdive.py  imports.py  summary.py  transactions.py
